<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TcoTixonStep_Inputs_v_1_x_x" Id="{54c8e9cf-996a-0841-2adc-41021e899baa}">
    <Declaration><![CDATA[TYPE TcoTixonStep_Inputs_v_1_x_x :
STRUCT
	NotEmptyFeeder AT %I* : BOOL;	
	SeparatorHomePos AT %I* : BOOL;
	FillingSensor AT %I* : BOOL; 
	SeparatorPresent AT %I* : BOOL;
	ComponentOutOfBox AT %I* : BOOL;
	StepperHomePos AT %I* : BOOL;
	StepperWorkPos AT %I* : BOOL;
	ControllerInAuto AT %I* : BOOL;

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>